# HydraViewer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/viewer/: hv.h
src/viewer/layout/: layout.cpp  layout.h
src/viewer/utils/: logger.cpp  logger.h
src/viewer/windows/: mainWindow.cpp  mainWindow.h
